--- a/src/containers/ListingPage/ListingPage.module.css
+++ b/src/containers/ListingPage/ListingPage.module.css
@@ -1038,16 +1038,21 @@
   text-align: center;
 
   > p {
-    margin-bottom: 0;
-    margin-top: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 6px;
+    align-items: start;
   }
 
   > p > svg {
     color: var(--marketplaceColor);
+    flex-shrink: 0;
+    margin-top: 4px;
   }
 }
 
-@media (--viewportMedium) {
+@media (--viewportSmall) {
   .highlightsWrapper {
     grid-template-columns: repeat(2, 1fr);
     justify-items: stretch;
